feat: allow filtering on roles by active status and permissions
